# didi_file_format

./: Cargo.toml  example.didi  readme.md  test_sniffer.didi
examples/: compare_performance.rs  sniffer.rs  write_and_read.rs
src/: lib.rs
